--- a/css/style.css
+++ b/css/style.css
@@ -1,189 +1,155 @@
 /* Шрифты, Текс, размеры, НАЧАЛО-------->>>>>>Текст, размеры, */
 
-
 @font-face {
     font-family: "Open Sans";
-    src:url("..//fonts/Open_Sans/OpenSans-Regular.ttf");
+    src: url("..//fonts/Open_Sans/OpenSans-Regular.ttf");
     font-style: normal;
     font-weight: 400;
 }
-
 @font-face {
     font-family: "Open Sans";
-    src:url("..//fonts/Open_Sans/OpenSans-Bold.ttf");
+    src: url("..//fonts/Open_Sans/OpenSans-Bold.ttf");
     font-style: normal;
     font-weight: 700;
 }
-
-.header__icon-text{
-    font-family: 'Arial',
-    sans-serif;
-    font-style:normal;
+.header__icon-text {
+    font-family: 'Arial', sans-serif;
+    font-style: normal;
     font-weight: 700;
     font-size: 45px;
     line-height: 22px;
     color: #ffffff;
 }
-
-a{
-    font-family: 'Arial',
-    sans-serif;
-    font-style:normal;
+a {
+    font-family: 'Arial', sans-serif;
+    font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 22px;
-    color: #ffffff; 
+    color: #ffffff;
 }
-
-h1{
-    font-family: 'Arial',
-    sans-serif;
-    font-style:normal;
+h1 {
+    font-family: 'Arial', sans-serif;
+    font-style: normal;
     font-weight: 700;
     font-size: 50px;
     line-height: 61px;
-    color: #ffffff; 
+    color: #ffffff;
 }
-
-h3{
-    font-family: 'Arial',
-    sans-serif;
-    font-style:normal;
+h3 {
+    font-family: 'Arial', sans-serif;
+    font-style: normal;
     font-weight: 700;
     font-size: 40px;
     line-height: 22px;
-    color: #414141; 
+    color: #414141;
     text-transform: uppercase;
 }
-
-
-.flickr__button{
-    font-family: 'Arial',
-    sans-serif;
-    font-style:normal;
+.flickr__button {
+    font-family: 'Arial', sans-serif;
+    font-style: normal;
     font-weight: 700;
     font-size: 20px;
     line-height: 22px;
-    color: #ffffff; 
+    color: #ffffff;
     text-transform: uppercase;
 }
-
-.blog__text{
-    font-family: 'Arial',
-    sans-serif;
-    font-style:normal;
+.blog__text {
+    font-family: 'Arial', sans-serif;
+    font-style: normal;
     font-weight: 700;
     font-size: 25px;
     line-height: 28px;
-    color: #626060;  
+    color: #626060;
 }
-
-.blog__text-date{
-    font-family: 'Arial',
-    sans-serif;
-    font-style:italic;
+.blog__text-date {
+    font-family: 'Arial', sans-serif;
+    font-style: italic;
     font-weight: 400;
     font-size: 14px;
     line-height: 28px;
-    color: #414141;  
+    color: #414141;
 }
-
-.blog__link{
-    font-family: 'Arial',
-    sans-serif;
-    font-style:normal;
+.blog__link {
+    font-family: 'Arial', sans-serif;
+    font-style: normal;
     font-weight: 400;
     font-size: 18px;
     line-height: 28px;
-    color: #ff6b24;  
+    color: #ff6b24;
 }
-
-input[type=text], input[type=email], #subject{
-    font-family: 'Arial',
-    sans-serif;
-    font-style:normal;
+input[type=text],
+input[type=email],
+#subject {
+    font-family: 'Arial', sans-serif;
+    font-style: normal;
     font-weight: 400;
     font-size: 17px;
     line-height: 26px;
-    color: #656464;  
+    color: #656464;
 }
-
-input[type=submit]{
-    font-family: 'Arial',
-    sans-serif;
-    font-style:normal;
+input[type=submit] {
+    font-family: 'Arial', sans-serif;
+    font-style: normal;
     font-weight: 700;
     font-size: 14px;
     line-height: 35px;
     text-transform: uppercase;
-    color: #ffffff; 
+    color: #ffffff;
 }
-
-.connection__copyright-text{
-    font-family: 'Arial',
-    sans-serif;
-    font-style:normal;
+.connection__copyright-text {
+    font-family: 'Arial', sans-serif;
+    font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
-    color: #919191; 
+    color: #919191;
 }
-
-.resume__text, .services__card-text{
-    font-family: 'Open Sans',
-    sans-serif;
-    font-style:normal;
+.resume__text,
+.services__card-text {
+    font-family: 'Open Sans', sans-serif;
+    font-style: normal;
     font-weight: 400;
     font-size: 17px;
     line-height: 26px;
-    color: #656464; 
+    color: #656464;
 }
-
-.portfolio__filter{
+.portfolio__filter {
     font-family: 'Sitka Banner';
-    font-style:italic;
+    font-style: italic;
     font-weight: 300;
     font-size: 14px;
     line-height: 23px;
-    color: #2a2a2a; 
+    color: #2a2a2a;
 }
-
-.services__card-title{
-    font-family: 'Open Sans',
-    sans-serif;
-    font-style:normal;
+.services__card-title {
+    font-family: 'Open Sans', sans-serif;
+    font-style: normal;
     font-weight: 700;
     font-size: 24px;
     line-height: 30px;
-    color: #454545; 
+    color: #454545;
 }
-
-.services__card-text{
-    font-family: 'Open Sans',
-    sans-serif;
-    font-style:normal;
+.services__card-text {
+    font-family: 'Open Sans', sans-serif;
+    font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 30px;
-    color: #454545; 
+    color: #454545;
 }
-
-
 /* Шрифты, Текс, размеры, КОНЕЦ-------->>>>>>Текст, размеры, */
-
-
 
 /*Header--------------start*/
 
-.header{
+.header {
     width: 100%;
     height: 904px;
     background-image: url(..//img/BG.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
-
-.header__wrapper{
+.header__wrapper {
     max-width: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -191,8 +157,7 @@ input[type=submit]{
     padding-top: 3.04rem;
     margin-right: 4rem;
 }
-
-hr:first-child{
+hr:first-child {
     position: relative;
     width: 71px;
     margin: 0px;
@@ -200,8 +165,7 @@ hr:first-child{
     bottom: 5px;
     left: 2px;
 }
-
-hr:last-child{
+hr:last-child {
     position: relative;
     width: 55px;
     margin: 0px;
@@ -209,204 +173,159 @@ hr:last-child{
     left: 97px;
     bottom: 8px;
 }
-
-
-li{
+li {
     list-style: none;
     margin-right: 24px;
 }
-
-li:first-child{
+li:first-child {
     margin-right: 32px;
 }
-
-li:last-child{
+li:last-child {
     margin-right: 57px;
 }
-
-a{
+a {
     text-decoration: none;
-
 }
-ul{
+ul {
     display: flex;
     flex-wrap: wrap;
 }
-
-.nav-container{
+.nav-container {
     flex-grow: 0;
     margin-right: 40px;
 }
-
-.header__icon{
+.header__icon {
     padding-top: 2rem;
-    flex-grow: 1; 
+    flex-grow: 1;
 }
-
-.header__title-container{
+.header__title-container {
     width: 100%;
     padding-top: 23.9rem;
 }
-
-.header__title{
+.header__title {
     text-transform: uppercase;
     padding-left: 5.35rem;
-
-
 }
-
-
 /*Header--------------end*/
 
 /*resume--------------start*/
 
-.resume__wrapper{
+.resume__wrapper {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     padding-top: 4rem;
 }
-
-.resume__container-title{
+.resume__container-title {
     padding-left: 1.6rem;
 }
-
-.resume__container{
+.resume__container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     width: 100%;
     padding-top: 5rem;
 }
-
-.resume__container-text{
+.resume__container-text {
     padding-top: 4.5rem;
     padding-left: 9rem;
     width: 44%;
 }
-
-.resume__text{
+.resume__text {
     margin: 0;
 }
-
-.resume__text:nth-child(2){
+.resume__text:nth-child(2) {
     padding-top: 1.69rem;
 }
-
-.resume__container-img{
+.resume__container-img {
     width: 34.59829%;
     margin-right: 3.4rem;
     margin-top: 0.7rem;
 }
-
-.resume__container-icons{
+.resume__container-icons {
     padding-top: 2rem;
 }
-
-.resume__social-icons{
+.resume__social-icons {
     background: url(..//icons/Social.png) no-repeat 0 0;
     width: 49px;
     height: 49px;
     display: inline-block;
     margin: 0px 3px 5px 0px;
 }
-
-.icon-fb{
+.icon-fb {
     background-position: 2px 1px;
 }
-
-.icon-tw{
+.icon-tw {
     background-position: -54px 1px;
 }
-
-.icon-gg{
+.icon-gg {
     background-position: -110px 1px;
 }
-
-.icon-ad{
+.icon-ad {
     background-position: -166px 1px;
 }
-
-.icon-inst{
+.icon-inst {
     background-position: -222px 1px;
 }
-
-.icon-in{
-   background-position: -278px 1px; 
+.icon-in {
+    background-position: -278px 1px;
 }
-
-
 /*resume--------------end*/
 
 /*portfolio--------------start*/
 
-.portfolio{
+.portfolio {
     display: flex;
     justify-content: center;
     padding-top: 3.22rem;
 }
-
-
-.portfolio__wrapper{
+.portfolio__wrapper {
     width: 1110px;
     display: flex;
     align-items: center;
     flex-flow: column;
-    margin-left: 1.15rem; 
-
+    margin-left: 1.15rem;
 }
-
-.portfolio__container-filter{
+.portfolio__container-filter {
     padding-top: 2rem;
 }
-
-.portfolio__filter:nth-child(2){
+.portfolio__filter:nth-child(2) {
     margin-left: 1.32rem;
 }
-
-.portfolio__filter:nth-child(3){
+.portfolio__filter:nth-child(3) {
     margin-left: 1.52rem;
 }
-
-.portfolio__filter:nth-child(4){
+.portfolio__filter:nth-child(4) {
     margin-left: 1.42rem;
 }
-
-.portfolio__filter:nth-child(5){
+.portfolio__filter:nth-child(5) {
     margin-left: 2.52rem;
 }
-
-.portfolio__filter:nth-child(6){
+.portfolio__filter:nth-child(6) {
     margin-left: 1.52rem;
 }
-
-
-.portfolio__container-img{
+.portfolio__container-img {
     display: flex;
     flex-wrap: wrap;
     padding-top: 3.61rem;
 }
-
-.portfolio__img{
+.portfolio__img {
     width: 33.33333%;
 }
-
-.active, .portfolio__filter:hover{
+.active,
+.portfolio__filter:hover {
     text-decoration: underline;
     text-decoration-color: #ff6b24;
 }
-
 /*portfolio--------------end*/
-
 
 /*services--------------start*/
 
-.services{
+.services {
     display: flex;
     justify-content: center;
 }
-
-.services__wrapper{
+.services__wrapper {
     width: 1110px;
     display: flex;
     align-items: center;
@@ -415,19 +334,17 @@ ul{
     margin-top: 4rem;
     margin-left: 1.2rem;
 }
-
 /*.services__container-title{
     margin-left: 1.12rem;
 }*/
 
-.services__container-card{
+.services__container-card {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     padding-top: 5rem;
 }
-
-.services__card{
+.services__card {
     width: 30.885%;
     text-align: center;
     border-right: 1px solid red;
@@ -435,169 +352,136 @@ ul{
     padding-bottom: 3.063rem;
     padding-right: 1.323rem;
 }
-
 .services__card:nth-child(2),
-.services__card:nth-child(5){
+.services__card:nth-child(5) {
     padding-left: 0.938rem;
 }
-
 .services__card:nth-child(3),
-.services__card:nth-child(6){
+.services__card:nth-child(6) {
     border-right: none;
     padding-right: 0rem;
     padding-left: 1.387rem;
 }
 .services__card:nth-child(4),
 .services__card:nth-child(5),
-.services__card:nth-child(6){
+.services__card:nth-child(6) {
     border-bottom: none;
     padding-bottom: 0.939rem;
     padding-top: 2.187rem;
 }
-
-
-.services__card-title{
+.services__card-title {
     margin: 0;
     padding-top: 1.25rem;
 }
-
-
-
-
-.services__title, .services__card-title{
+.services__title,
+.services__card-title {
     text-transform: uppercase;
 }
 /*services--------------end*/
 
-
 /*flickr--------------start*/
 
-.flickr__wrapper{
+.flickr__wrapper {
     display: flex;
     align-items: center;
     flex-flow: column;
     padding-top: 4.88rem;
 }
-
-.flickr__container-title{
+.flickr__container-title {
     padding-left: 1.1rem;
 }
-
-.flickr__gallery{
+.flickr__gallery {
     display: flex;
     padding-top: 4.2rem;
-
 }
-
-.flickr__slide{
+.flickr__slide {
     width: 20%;
     margin-right: -1px;
 }
-
-.flickr__slide:first-child{
+.flickr__slide:first-child {
     margin-left: 2px;
 }
-
-.flickr__container-button{
+.flickr__container-button {
     margin-top: 3.99rem;
     margin-right: 0.24rem;
 }
-
-
-.flickr__button{
-border: 2px solid #ff6b24;
-background-color: #ff6b24;
-padding: 0.8375rem 1.75rem;
-text-transform: uppercase;
-letter-spacing: 0.02rem;
-transition: all .2s ease-in-out;
+.flickr__button {
+    border: 2px solid #ff6b24;
+    background-color: #ff6b24;
+    padding: 0.8375rem 1.75rem;
+    text-transform: uppercase;
+    letter-spacing: 0.02rem;
+    transition: all .2s ease-in-out;
 }
-
-.flickr__button:hover{
+.flickr__button:hover {
     background-color: #ff8e58;
 }
-
-
 /*flickr--------------end*/
 
 /*blog--------------start*/
-.blog__wrapper{
+
+.blog__wrapper {
     padding-top: 5rem;
 }
-
-.blog__container-title{
+.blog__container-title {
     text-align: center;
     padding-left: 0.49rem;
 }
-
-.blog__container-card{
+.blog__container-card {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     padding-top: 4rem;
 }
-
 /*.blog__card:first-child{
     margin-left: 2%;
 }*/
 
-.blog__card:nth-child(2), 
-.blog__card:nth-child(4){
+.blog__card:nth-child(2),
+.blog__card:nth-child(4) {
     margin-top: 3.05rem;
     padding-left: 0.4rem;
 }
-
-.blog__card:nth-child(3){
-    padding-left: 3.2rem; 
+.blog__card:nth-child(3) {
+    padding-left: 3.2rem;
 }
-
-.blog__card{
+.blog__card {
     width: 16.11%;
     padding-top: 0.7rem;
 }
-
-.blog__link{
+.blog__link {
     position: relative;
     top: 3.28rem;
     left: 10.3rem;
 }
-
-.blog__text{
+.blog__text {
     margin: 0;
     padding-top: 2.8rem;
     padding-left: 1.4rem;
 }
-
-.blog__text-date{
+.blog__text-date {
     margin: 0;
     padding-top: 0.3rem;
     padding-left: 1.6rem;
 }
-
-
-.blog__red{
+.blog__red {
     font-style: normal;
     color: #ff6b24;
 }
-
-
-
 /*blog--------------end*/
 
 /*connection--------------start*/
 
-.connection__wrapper{
+.connection__wrapper {
     padding-top: 3.8rem;
 }
-
-.connection__container-title{
+.connection__container-title {
     margin-left: 1.2rem;
 }
+/* Style inputs with type="text", select elements and textareas */
 
-
-
- /* Style inputs with type="text", select elements and textareas */
-input[type=text], select{
+input[type=text],
+select {
     width: 48.5%;
     padding: 11px;
     border: 1px solid #ccc;
@@ -607,18 +491,16 @@ input[type=text], select{
     resize: vertical;
     padding-bottom: 1.2rem;
 }
-
-input[type=text]:nth-child(2), 
-input[type=text]:nth-child(4){
+input[type=text]:nth-child(2),
+input[type=text]:nth-child(4) {
     margin-left: 2rem;
 }
-
-input[type=text]:nth-child(4){
+input[type=text]:nth-child(4) {
     margin-top: 0.89rem;
     margin-bottom: 0.4rem;
 }
-
-input[type=email], select{
+input[type=email],
+select {
     width: 48.5%;
     padding: 11px;
     border: 1px solid #ccc;
@@ -627,7 +509,6 @@ input[type=email], select{
     margin-bottom: 0.4rem;
     resize: vertical;
 }
-
 textarea {
     width: 100%;
     padding: 12px;
@@ -636,9 +517,8 @@ textarea {
     resize: vertical;
     margin-top: 1.6rem;
 }
-
-
 /* Style the submit button with a specific background color etc */
+
 input[type=submit] {
     width: 14.9%;
     background-color: #ff6b24;
@@ -649,49 +529,43 @@ input[type=submit] {
     margin-left: 2.22rem;
     margin-top: 1.9rem;
 }
-
-#subject{
+#subject {
     height: 257px;
 }
-
 /* When moving the mouse over the submit button, add a darker green color */
+
 input[type=submit]:hover {
     background-color: #e37945;
 }
-
 /* Add a background color and some padding around the form */
-.connection__container{
+
+.connection__container {
     display: flex;
     justify-content: center;
     border-radius: 5px;
     padding-left: 1.22rem;
     padding-top: 1.28rem;
-} 
-
-.connection__form{
+}
+.connection__form {
     width: 1140px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     padding-top: 4rem;
 }
-
-.connection__title{
+.connection__title {
     text-align: center;
 }
-
-.connection__copyright{
+.connection__copyright {
     background-color: #2b2a2a;
     text-align: center;
     color: white;
     margin-top: 6rem;
 }
-
-.connection__copyright-text{
+.connection__copyright-text {
     margin: 0;
     padding-top: 1.4rem;
     padding-bottom: 1.9rem;
     padding-left: 1.5rem;
 }
-
 /*connection--------------end*/
